--- a/src/app/pages/auth/log-in/log-in.component.scss
+++ b/src/app/pages/auth/log-in/log-in.component.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   display: block;
-  background-color: #eceef6;
+  background-color:#2C2C2C;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -16,6 +16,7 @@ mat-card {
   width: 30%;
   margin: 10% auto;
   border-radius: 8px;
+  background-color: #4A4A4A;
 }
 mat-form-field, mat-checkbox {
   width: 80%;
@@ -33,15 +34,3 @@ mat-card-content {
   margin: 20px auto;
 }
 
-.example-container mat-form-field + mat-form-field {
-  margin-left: 8px;
-}
-
-.example-right-align {
-  text-align: right;
-}
-
-input.example-right-align::-webkit-outer-spin-button,
-input.example-right-align::-webkit-inner-spin-button {
-  display: none;
-}
