--- a/src/app/pages/products-detail/prodacts-detail.component.scss
+++ b/src/app/pages/products-detail/prodacts-detail.component.scss
@@ -3,11 +3,12 @@
   justify-content: center;
   padding: 20px;
   margin-top: 100px;
+  background-color: #333;
 }
 
 .row {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin-bottom: 15px;
   align-items: center;
 }
@@ -15,12 +16,19 @@
 .label {
   font-weight: bold;
   color: #555;
+  margin-left: 10px;
   flex: 1;
 }
 
 .value {
   color: #777;
   flex: 2;
+}
+
+.product-icon,
+.profile-icon {
+  font-size: 24px;
+  margin-right: 15px;
 }
 
 .profile-section {
