--- a/src/app/pages/products-list/products-list.component.html
+++ b/src/app/pages/products-list/products-list.component.html
@@ -1,36 +1,34 @@
-<div *ngIf="this.productService.productsSignal() as product" style="margin-top: 25px" class="mat-elevation-z8">
+<div *ngIf="this.productService.productsSignal() as product" class="product-table-container mat-elevation-z8">
 
   <table mat-table [dataSource]="this.productService.productsSignal()">
     <ng-container matColumnDef="index">
-      <th mat-header-cell *matHeaderCellDef><b>#</b></th>
-      <td mat-cell *matCellDef="let product; let i = index">{{ i + 1 }}</td>
+      <th mat-header-cell *matHeaderCellDef class="header-cell"><b>#</b></th>
+      <td mat-cell *matCellDef="let product; let i = index" class="data-cell">{{ i + 1 }}</td>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef><b>Product name</b></th>
-      <td mat-cell *matCellDef="let product">
-        {{ product.name }}
-      </td>
+      <th mat-header-cell *matHeaderCellDef class="header-cell"><b>Product name</b></th>
+      <td mat-cell *matCellDef="let product" class="data-cell">{{ product.name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="cost">
-      <th mat-header-cell *matHeaderCellDef><b>Cost</b></th>
-      <td mat-cell *matCellDef="let product">{{ product.cost | currency: 'USD'  }}</td>
+      <th mat-header-cell *matHeaderCellDef class="header-cell"><b>Cost</b></th>
+      <td mat-cell *matCellDef="let product" class="data-cell">{{ product.cost | currency: 'USD' }}</td>
     </ng-container>
 
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef><b>Description</b></th>
-      <td mat-cell *matCellDef="let product">{{ product.description }}</td>
+      <th mat-header-cell *matHeaderCellDef class="header-cell"><b>Description</b></th>
+      <td mat-cell *matCellDef="let product" class="data-cell">{{ product.description }}</td>
     </ng-container>
 
     <ng-container matColumnDef="detail">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let product">
-          <button [routerLink]="['/products-detail', product.id]" style="background-color: #f3edf1;"  mat-raised-button color="primary">See Detail Info</button>
-        </td>
+      <th mat-header-cell *matHeaderCellDef class="header-cell"></th>
+      <td mat-cell *matCellDef="let product" class="data-cell">
+        <button [routerLink]="['/products-detail', product.id]" class="detail-button" mat-raised-button color="primary">See Detail Info</button>
+      </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns" class="table-header-row"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns" class="table-row"></tr>
   </table>
 </div>
