--- a/src/app/pages/auth/log-in/log-in.component.scss
+++ b/src/app/pages/auth/log-in/log-in.component.scss
@@ -4,8 +4,10 @@
   padding: 0;
   width: 100%;
   height: 100%;
-  display: block;
-  background-color:#2C2C2C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #2C2C2C;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,16 +15,19 @@
 }
 
 mat-card {
-  width: 30%;
+  width: 90%;
+  max-width: 400px;
   margin: 10% auto;
   border-radius: 8px;
   background-color: #4A4A4A;
 }
+
 mat-form-field, mat-checkbox {
-  width: 80%;
+  width: 100%;
   display: block;
   margin: auto;
 }
+
 mat-card-content {
   margin-top: 20px;
 }
@@ -30,7 +35,20 @@ mat-card-content {
 .login-button {
   margin-top: 20px;
   display: block;
-  width: 80%;
+  width: 100%;
   margin: 20px auto;
 }
 
+@media (min-width: 768px) {
+  mat-card {
+    width: 50%;
+    max-width: 600px;
+  }
+}
+
+@media (min-width: 1024px) {
+  mat-card {
+    width: 30%;
+    max-width: 500px;
+  }
+}
