--- a/src/app/pages/products-detail/prodacts-detail.component.scss
+++ b/src/app/pages/products-detail/prodacts-detail.component.scss
@@ -6,11 +6,16 @@
   background-color: #333;
 }
 
+.card {
+  background-color: #333333;
+}
+
 .row {
   display: flex;
   justify-content: flex-start;
   margin-bottom: 15px;
   align-items: center;
+  color: white;
 }
 
 .label {
@@ -18,10 +23,11 @@
   color: #555;
   margin-left: 10px;
   flex: 1;
+  color: white;
 }
 
 .value {
-  color: #777;
+  color: white;
   flex: 2;
 }
 
@@ -48,4 +54,34 @@ h4 {
 
 .button-group button {
   margin-left: 10px;
+}
+.no-product-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  background-color: #333;
+  padding: 30px;
+}
+
+.no-product-content {
+  text-align: center;
+  border-radius: 8px;
+  padding: 40px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+}
+
+.no-product-title {
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  margin-bottom: 20px;
+}
+
+.no-product-description {
+  font-size: 16px;
+  color: white;
+  margin-bottom: 30px;
 }
