--- a/src/app/pages/auth/log-in/log-in.component.html
+++ b/src/app/pages/auth/log-in/log-in.component.html
@@ -3,7 +3,7 @@
     <mat-tab-group mat-stretch-tabs class="example-stretched-tabs">
       <mat-tab label="Sign In">
         <mat-card-content>
-          <form [formGroup]="form" (ngSubmit)="submit()">
+          <form [formGroup]="form">
             <mat-form-field>
               <input
                 matInput
@@ -34,7 +34,7 @@
               </mat-error>
             </mat-form-field>
 
-            <button type="submit" mat-raised-button color="primary" class="login-button">
+            <button (click)="submit()" type="button" mat-raised-button color="primary" class="login-button">
               Sign In
             </button>
           </form>
