--- a/src/app/pages/products-list/products-list.component.scss
+++ b/src/app/pages/products-list/products-list.component.scss
@@ -124,3 +124,9 @@ table {
     font-size: 11px;
   }
 }
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
