--- a/src/app/pages/products-detail/prodacts-detail.component.scss
+++ b/src/app/pages/products-detail/prodacts-detail.component.scss
@@ -85,3 +85,9 @@ h4 {
   color: white;
   margin-bottom: 30px;
 }
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
